--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "filepond": "^4.30.4",
         "filepond-plugin-file-poster": "^2.5.1",
         "filepond-plugin-file-validate-type": "^1.2.8",
+        "filepond-plugin-image-crop": "^2.0.6",
         "filepond-plugin-image-preview": "^4.6.11",
         "vue-axios": "^3.5.2",
         "vue-filepond": "^7.0.3",
