--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
         "dropzone": "^6.0.0-beta.2",
         "filepond": "^4.30.4",
         "filepond-plugin-file-poster": "^2.5.1",
+        "filepond-plugin-file-validate-size": "^2.2.7",
         "filepond-plugin-file-validate-type": "^1.2.8",
+        "filepond-plugin-get-file": "^1.0.7",
         "filepond-plugin-image-crop": "^2.0.6",
+        "filepond-plugin-image-overlay": "^1.0.9",
         "filepond-plugin-image-preview": "^4.6.11",
+        "filepond-plugin-image-validate-size": "^1.2.7",
+        "filepond-plugin-pdf-preview": "^1.0.4",
         "vue-axios": "^3.5.2",
         "vue-filepond": "^7.0.3",
         "vue-loader": "^17.0.0",
